<resources>
    <string name="app_name">Android Modul</string>
    <string name="tittle">PRAKTIKUM MDP MODUL ANDROID</string>
    <string name="regtittle">REGISTRASI DATA</string>
    <string name="user">username</string>
    <string name="password">password</string>
    <string name="login">masuk</string>
    <string name="register">register</string>
    <string name="email">email</string>
    <string name="about">about</string>
    <string name="logout">Logout</string>
    <string name="Header">Selamat datang Di Praktikum MDP 2018</string>
    <string name="name">Nama Kamu</string>
    <string name="description">Selanjutnya akan di jelaskan di modul android berikutnya Mengenai API dan MVP</string>
</resources>
