<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.asus.aplikasimodul2kel24new.LoginActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="299dp"
            android:layout_height="166dp"
            android:layout_marginStart="146dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="166dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.45"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/register" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="180dp"
            android:layout_height="24dp"
            android:layout_marginTop="35dp"
            android:text="@string/regtittle"
            android:textAlignment="center"
            android:textSize="18sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.462"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <EditText
            android:id="@+id/etUsernameRegister"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/user"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <EditText
            android:id="@+id/etPasswordRegister"
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/etUsernameRegister"
            app:layout_constraintStart_toStartOf="@+id/etUsernameRegister"
            app:layout_constraintTop_toBottomOf="@+id/etUsernameRegister" />

        <Button
            android:id="@+id/btRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/register"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/etPasswordRegister"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="@+id/etPasswordRegister"
            app:layout_constraintTop_toBottomOf="@+id/etPasswordRegister" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>
