<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.asus.aplikasimodul2kel24new.LoginActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="matrix"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/backrogu" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="152dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            android:contentDescription="TODO"
            android:scaleType="center"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/logo"
            tools:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="223dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="44dp"
            android:fontFamily="casual"
            android:text="@string/tittle"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/etUsernameLogin"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etUsernameLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="84dp"
            android:ems="10"
            android:hint="@string/user"
            android:textColorHint="@color/white"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/etPasswdLogin"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="84dp"
            android:ems="10"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            android:inputType="textPassword"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/etUsernameLogin"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/etUsernameLogin"
            app:layout_constraintTop_toBottomOf="@+id/etUsernameLogin" />

        <Button
            android:id="@+id/btnSignUpLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="40dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/register"
            android:textColor="@android:color/background_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/etPasswdLogin"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/etPasswdLogin"
            app:layout_constraintTop_toBottomOf="@+id/etPasswdLogin"
            app:layout_constraintVertical_bias="0.202" />

        <Button
            android:id="@+id/btnSignInLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="33dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/login"
            android:textColor="@android:color/background_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/etPasswdLogin"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/btnSignUpLogin"
            app:layout_constraintTop_toBottomOf="@+id/etPasswdLogin"
            app:layout_constraintVertical_bias="0.202" />

        <android.support.constraint.Group
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="btnSignInLogin,imageView" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
