<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/cardView"
        style="@style/CardView.Light"
        android:layout_width="320dp"
        android:layout_height="400dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.262">

        <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/media_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="fitCenter"
                android:src="@drawable/komputerr"
                app:layout_constraintBottom_toTopOf="@+id/primary_text"
                app:layout_constraintDimensionRatio="H,16:9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:srcCompat="@drawable/komputerr" />

            <TextView
                android:id="@+id/primary_text"
                android:layout_width="0dp"
                android:layout_height="61dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:text="@string/Header"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="#DE000000"
                app:layout_constraintBottom_toTopOf="@+id/tvNameMain"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/media_image" />

            <TextView
                android:id="@+id/tvNameMain"
                android:layout_width="0dp"
                android:layout_height="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/name"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#8A000000"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/primary_text" />


            <TextView
                android:id="@+id/tvdescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="8dp"
                android:text="@string/description"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#8A000000"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tvNameMain"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tvNameMain"
                app:layout_constraintTop_toTopOf="@+id/tvNameMain"
                app:layout_constraintVertical_bias="1.0" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/btnLogoutMain"
        android:layout_width="92dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="68dp"
        android:background="@color/colorPrimaryDark"
        android:minWidth="0dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/logout"
        android:textAlignment="center"
        android:textColor="#de101010"
        app:layout_constraintBottom_toBottomOf="@+id/btnEmail"
        app:layout_constraintEnd_toStartOf="@+id/btnEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/btnEmail"
        app:layout_constraintVertical_bias="1.0" />


    <Button
        android:id="@+id/btnEmail"
        android:layout_width="70dp"
        android:layout_height="49dp"
        android:layout_marginTop="12dp"
        android:background="@color/colorPrimaryDark"
        android:minWidth="0dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="Email"
        android:textAlignment="center"
        android:textColor="#de101010"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <Button
        android:id="@+id/btnAboutMain"
        android:layout_width="77dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/about"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/btnEmail"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintHorizontal_bias="0.939"
        app:layout_constraintStart_toEndOf="@+id/btnEmail"
        app:layout_constraintTop_toTopOf="@+id/btnLogoutMain"
        app:layout_constraintVertical_bias="1.0" />


</android.support.constraint.ConstraintLayout>